manifests/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapp-frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
